--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,18 @@
         </execution>
     </executions>
 </plugin>
+			<!--                    OWASAP Dependency check Plugin -->
+
+		<plugin>
+                <groupId>org.owasp</groupId>
+                <artifactId>dependency-check-maven</artifactId>
+                <version>8.4.2</version>
+                <configuration>
+                <format>ALL</format>
+                <failBuildOnCVSS>9</failBuildOnCVSS>
+                </configuration>
+                
+            </plugin>
 
 			
 		</plugins>
